--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +10,75 @@
     <meta name="keywords" content="cronometro, dom, bom, proyecto, js, javascript">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/867f1193c1.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
+    <header>
+        <nav class="navbar navbar-dark bg-danger">
+            <div class="container">
+                <span class="navbar-brand mb-0 h1">Cronómetro</span>
+            </div>
+        </nav>
+    </header>
+
+    <main class="container my-5 d-flex justify-content-center">
+        <section id="dimensiones" class="bg-dark rounded p-4">
+
+            <!-- DISPLAY -->
+            <section id="display" class="px-3 pt-3 rounded">
+                <div class="d-flex justify-content-around">
+                    <p>30</p>
+                    <p>Thu</p>
+                    <p>2020</p>
+                </div>
+                <div class="d-flex justify-content-around">
+                    <p>02</p>
+                    <p>:</p>
+                    <p>51</p>
+                    <p>:</p>
+                    <p>40</p>
+                    <p>AM</p>
+                </div>
+                <hr />
+                <div class="d-flex justify-content-around" id="cronometro">
+                    <p>02</p>
+                    <p>:</p>
+                    <p>51</p>
+                    <p>:</p>
+                    <p>40</p>
+                </div>
+            </section>
+
+            <!-- BOTONES -->
+            <section class="d-flex justify-content-around py-3 text-center">
+                <button class="btn btn-info ">
+                    <i class="fas fa-play"></i>
+                    <small><span class="text-light">Play</span></small>
+                </button>
+                <button class="btn btn-warning ">
+                    <i class="fas fa-pause text-light"></i>
+                    <small><span class="text-light">Pause</span></small>
+                </button>
+                <button class="btn btn-danger ">
+                    <i class="fas fa-power-off"></i>
+                    <small><span class="text-light">Stop</span></small>
+                </button>
+            </section>
+
+            <!-- REDES -->
+            <section class="text-center text-light">
+                <a><i class="fab fa-linkedin mx-2"></i></a>
+                <a><i class="fab fa-github-square"></i></a>
+            </section>
+        </section>
+    </main>
+
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/cronometro.js"></script>
 </body>
+
 </html>
