--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 
             <!-- DISPLAY -->
             <section id="display" class="px-3 pt-3 rounded">
-                <div class="d-flex justify-content-around">
+                <div class="d-flex justify-content-around" id="hora">
                     <p>30</p>
                     <p>Thu</p>
                     <p>2020</p>
                 </div>
-                <div class="d-flex justify-content-around">
+                <div class="d-flex justify-content-around mb-2">
                     <p>02</p>
                     <p>:</p>
                     <p>51</p>
@@ -41,7 +41,6 @@
                     <p>40</p>
                     <p>AM</p>
                 </div>
-                <hr />
                 <div class="d-flex justify-content-around" id="cronometro">
                     <p>02</p>
                     <p>:</p>
@@ -53,9 +52,9 @@
 
             <!-- BOTONES -->
             <section class="d-flex justify-content-around py-3 text-center">
-                <button class="btn btn-info ">
+                <button class="btn btn-info">
                     <i class="fas fa-play"></i>
-                    <small><span class="text-light">Play</span></small>
+                    <small><span class="text-light">Start</span></small>
                 </button>
                 <button class="btn btn-warning ">
                     <i class="fas fa-pause text-light"></i>
