--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="navbar navbar-dark bg-danger">
             <div class="container">
-                <span class="navbar-brand mb-0 h1">Cronómetro</span>
+                <span class="navbar-brand mb-0 h1 sizeLetra">Cronómetro</span>
             </div>
         </nav>
     </header>
@@ -40,9 +40,9 @@
                     <p id="minutos"></p>
                     <p>:</p>
                     <p id="segundos"></p>
-                    <p id="amPm">AM</p>
+                    <p id="amPm"></p>
                 </div>
-                <div class="d-flex justify-content-around align-items-center" id="cronometro">
+                <div class="d-flex justify-content-around" id="cronometro">
                     <p id="cronometroHoras"></p>
                     <p>:</p>
                     <p id="cronometroMinutos"></p>
@@ -71,12 +71,20 @@
 
             <!-- REDES -->
             <section class="text-center text-light">
-                <a href="https://www.linkedin.com/in/jos%C3%A9-antonio-burgos-66a8001a9/" target="_blank"><i class="fab fa-linkedin mx-2"></i></a>
-                <a href="https://github.com/Jose-anbu/Jose-anbu.github.io" target="_blank"><i class="fab fa-github-square"></i></a>
+                <a href="https://www.linkedin.com/in/josé-antonio-burgos-66a8001a9" target="_blank"><i
+                        class="fab fa-linkedin mx-2"></i></a>
+                <a href="https://github.com/Jose-anbu/Jose-anbu.github.io" target="_blank"><i
+                        class="fab fa-github-square"></i></a>
             </section>
         </section>
     </main>
 
+    <footer class="bg-danger text-light text-center py-2 fixed-bottom">
+        <div class="container">
+            <p class="lead">José Antonio Burgos</p>
+            <p>&copy; Todos los derechos reservados</p>
+        </div>
+    </footer>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
