Se realiza correccion de alineado

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <p id="segundos"></p>
                     <p id="amPm"></p>
                 </div>
-                <div class="d-flex justify-content-around" id="cronometro">
+                <div class="d-flex justify-content-around align-items-center" id="cronometro">
                     <p id="cronometroHoras"></p>
                     <p>:</p>
                     <p id="cronometroMinutos"></p>
